# CppPitt.github.io

_posts/: 2019-12-09-welcome-to-jekyll.markdown
slides/2020_01_one_definition_rule/: CMakeLists.txt
slides/2020_01_one_definition_rule/doc/: odr-presentation.odp
slides/2020_01_one_definition_rule/include/libeven/: isIntEven.h
slides/2020_01_one_definition_rule/include/libodd/: isIntOdd.h
slides/2020_01_one_definition_rule/src/: isIntEven.cpp  isIntOdd.cpp  main.cpp
